# dribbling-detection-algorithm

./: .gitignore  Cargo.toml  README.md  config.toml  entrypoint.sh
src/: config.rs  main.rs
src/data/: dataset.rs  models.rs
src/domain/: dataset.rs  mod.rs  models.rs
src/domain/data/: dataset.rs  download_data.rs  mod.rs  models.rs
src/domain/events/: create_drible_models.rs  drible_detection.rs  drible_detector.rs  drible_models.rs  mod.rs
src/domain/events/actuators/: mod.rs
src/dribbling_detection/: create_dribble_models.rs  create_drible_models.rs  dribble_detector.rs  dribble_models.rs  drible_detector.rs  mod.rs
src/utils/: annotation_calculations.rs  annotations.rs  image_operations.rs  keyboard_input.rs  mod.rs  video_processing.rs  visualizations.rs
