[package]
name = "dribbling-detection-algorithm"
version = "0.1.0"
edition = "2021"

[dependencies]
opencv = { version = "0.93.5", features = ["imgcodecs", "highgui"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8.18"
tokio = { version = "1", features = ["fs", "macros", "rt-multi-thread"] }
dotenv = "0.15"
prettytable = "0.10"
rayon = "1.10.0"
reqwest = { version = "0.12.9", features = ["stream"] }
zip = "2.2.1"
openssl = { version = "0.10", features = ["vendored"] }
futures-util = "0.3.31"

[build-dependencies]
proc-macro2 = "1.0"
